Ana sayfadaki listeleme işlemleri bitti. Model kısmında düzenleme işlemleri yaptım. partiallar içine veriler çekildi

--- a/Janson/Views/Main/MainGaleryPartial.cshtml
+++ b/Janson/Views/Main/MainGaleryPartial.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@using Janson.Models.Entity
+@model List<PhotoTbl>
+
+
 <div class="gallery-area section-padding40">
     <div class="container">
         <div class="row">
@@ -9,46 +12,21 @@
             </div>
         </div>
         <div class="row justify-content-between">
-            <div class="offset-xl-1 col-xl-5 col-lg-6 col-md-6 col-sm-6">
-                <div class="box snake mb-30">
-                    <div class="gallery-img small-img " style="background-image: url(/jnstema/assets/img/gallery/gallery1.png);"></div>
-                    <div class="overlay">
-                        <div class="overlay-content">
-                            <a href="~/jnstema/assets/img/gallery/gallery1.png" class="img-pop-up"><i class="ti-plus"></i></a>
+            @foreach (var x in Model)
+            {
+                <div class="offset-xl-1 col-xl-5 col-lg-6 col-md-6 col-sm-6">
+                    <div class="box snake mb-30">
+                        <div class="gallery-img small-img " style="background-image: url(@x.photo);"></div>
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="@x.photo" class="img-pop-up"><i class="ti-plus"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xl-5 ol-lg-6 col-lg-6 col-md-6 col-sm-6">
-                <div class="box snake mb-30">
-                    <div class="gallery-img small-img " style="background-image: url(/jnstema/assets/img/gallery/gallery2.png);"></div>
-                    <div class="overlay">
-                        <div class="overlay-content">
-                            <a href="~/jnstema/assets/img/gallery/gallery2.png" class="img-pop-up"><i class="ti-plus"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="offset-xl-1 col-xl-5 col-lg-6 col-md-6 col-sm-6">
-                <div class="box snake mb-30">
-                    <div class="gallery-img small-img " style="background-image: url(/jnstema/assets/img/gallery/gallery3.png);"></div>
-                    <div class="overlay">
-                        <div class="overlay-content">
-                            <a href="~/jnstema/assets/img/gallery/gallery2.png" class="img-pop-up"><i class="ti-plus"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6">
-                <div class="box snake mb-30">
-                    <div class="gallery-img small-img " style="background-image: url(/jnstema/assets/img/gallery/gallery4.png);"></div>
-                    <div class="overlay">
-                        <div class="overlay-content">
-                            <a href="~/jnstema/assets/img/gallery/gallery3.png" class="img-pop-up"><i class="ti-plus"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            }
+
+
         </div>
     </div>
 </div>
