--- a/Janson/Views/Main/MainHobiPartial.cshtml
+++ b/Janson/Views/Main/MainHobiPartial.cshtml
@@ -1,37 +1,29 @@
-﻿<div class="our-services pt-top section-bg1">
+﻿@using Janson.Models.Entity
+@model List<HobilerTBL> 
+
+<div class="our-services pt-top section-bg1">
     <div class="container">
         <div class="rwo">
             <div class="col-xl-12">
                 <div class="section-tittle mb-75 text-center">
-                    <h2>My Expertise</h2>
+                    <h2>Hobiler</h2>
                 </div>
             </div>
         </div>
         <div class="row d-flex justify-contnet-center">
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-services mb-30">
-                    <div class="services-cap">
-                        <h5>Experience<br> Design</h5>
-                        <p>Switzerland where I am a full time Product Designer.</p>
+            @foreach (var x in Model)
+            {
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="single-services mb-30">
+                        <div class="services-cap">
+                            <h5>@x.Baslik</h5>
+                            <p>@x.İcerik</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-services mb-30">
-                    <div class="services-cap">
-                        <h5>Interaction<br> Design</h5>
-                        <p>Switzerland where I am a full time Product Designer.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-services mb-30">
-                    <div class="services-cap">
-                        <h5>Front-end<br> Design</h5>
-                        <p>Switzerland where I am a full time Product Designer.</p>
-                    </div>
-                </div>
-            </div>
+            }
+
+
         </div>
     </div>
 </div>
