--- a/Janson/Views/Main/AboutUsPartialprt.cshtml
+++ b/Janson/Views/Main/AboutUsPartialprt.cshtml
@@ -1,20 +1,31 @@
-﻿<div class="row pt-40">
-    <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="experience">
-            <span>06 years</span>
-            <p>of experience</p>
+﻿@using Janson.Models.Entity
+@model List<AboutpartTbl>
+
+
+@*@{
+        var shortedData = Model.OrderBy(x => x.ID).ToList();
+    }
+
+    @for (int i = 0; i < shortedData.Count; i += 3)
+    {
+        @for (int j = i; j < i + 3 && j < shortedData.Count; j++)
+        {*@
+
+
+<div class="row pt-40">
+
+    @foreach (var x in Model)
+    {
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="experience">
+                <span>@x.Baslik</span>
+                <p>@x.icerik</p>
+            </div>
         </div>
-    </div>
-    <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="experience">
-            <span>$40M+</span>
-            <p>invested in projects I was<br> involved in</p>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="experience">
-            <span>Multiple</span>
-            <p>industry aaaa</p>
-        </div>
-    </div>
-</div>
+    
+    }
+
+
+
+
+
