--- a/Janson/Views/Shared/_Layout.cshtml
+++ b/Janson/Views/Shared/_Layout.cshtml
@@ -52,9 +52,9 @@
                         <div class="main-menu f-right d-none d-lg-block">
                             <nav>
                                 <ul id="navigation">
-                                    <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="protfolio.html">Protfolio</a></li>
+                                    <li class="active"><a href="~/Main/Index">Home</a></li>
+                                    <li><a href="~/About/Index">About</a></li>
+                                    <li><a href="~/Protfolio/Index">Protfolio</a></li>
                                     <li>
                                         <a href="blog.html">Blog</a>
                                         <ul class="submenu">
@@ -63,7 +63,7 @@
                                             <li><a href="elements.html">Elements</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="~/Contact/Index">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>
