--- a/Janson/Views/Admin/SideBarPartial.cshtml
+++ b/Janson/Views/Admin/SideBarPartial.cshtml
@@ -3,18 +3,33 @@
         <ul class="metismenu" id="menu">
 
             <li>
-                <a href="~/Admin/index" aria-expanded="false">
+                <a href="~/Main/index" aria-expanded="false">
                     <i class="icon-action-undo menu-icon"></i><span class="nav-text">Siteye Git</span>
+                </a>
+            </li>
+
+
+            <li>
+                <a href="~/Admin/index" aria-expanded="false">
+                    <i class="icon-action-undo menu-icon"></i><span class="nav-text">Ana Sayfa</span>
                 </a>
             </li>
 
 
 
             <li>
-                <a href="#" aria-expanded="false">
-                    <i class="mdi mdi-ferry"></i><span class="nav-text">Container</span>
+                <a href="~/AdminAbout/index" aria-expanded="false">
+                    <i class="mdi mdi-ferry"></i><span class="nav-text">About</span>
                 </a>
             </li>
+            
+            @*<li>
+                <a href="~/AdminAboutP/index" aria-expanded="false">
+                    <i class="mdi mdi-ferry"></i><span class="nav-text">About Prt</span>
+                </a>
+            </li>*@ 
+
+            @*Partial olarak geçtim kullanımdan kaldırdım.*@
 
 
         </ul>
