Admin Galery Ve Admin Hobies Controlleri yazıldı. Sidebar'a ekleme yapıldı, Galery(CRUD),Hobies(CRUD) işlemleri için sayfalar yazıldı.
Eksikler;
Mesajlar için admin tarafında page oluşturulacak.
DowlandCv butonu kodlanacak
Let'sTalk yerine login paneline yönlendirme yapılacak Login paneli Kodlanacak.
Blog yazılmaya başlanacak

--- a/Janson/Views/AdminAboutP/Index.cshtml
+++ b/Janson/Views/AdminAboutP/Index.cshtml
@@ -14,9 +14,9 @@
 
         <th>İcerik</th>
         <th>Degisen 1</th>
-        <th>Degisen 2</th>
-
         <th>Güncelle</th>
+
+        <th>Sil</th>
 
     </tr>
     @foreach (var x in Model)
