--- a/Janson/Views/Admin/SideBarPartial.cshtml
+++ b/Janson/Views/Admin/SideBarPartial.cshtml
@@ -22,14 +22,26 @@
                     <i class="mdi mdi-ferry"></i><span class="nav-text">About</span>
                 </a>
             </li>
-            
+
             @*<li>
-                <a href="~/AdminAboutP/index" aria-expanded="false">
-                    <i class="mdi mdi-ferry"></i><span class="nav-text">About Prt</span>
-                </a>
-            </li>*@ 
+            <a href="~/AdminAboutP/index" aria-expanded="false">
+                <i class="mdi mdi-ferry"></i><span class="nav-text">About Prt</span>
+            </a>
+        </li>*@
 
             @*Partial olarak geçtim kullanımdan kaldırdım.*@
+
+            <li>
+                <a href="~/AdminHobies/index" aria-expanded="false">
+                    <i class="mdi mdi-ferry"></i><span class="nav-text">Hobiler</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="~/AdminGalery/index" aria-expanded="false">
+                    <i class="mdi mdi-ferry"></i><span class="nav-text">Galery</span>
+                </a>
+            </li>
 
 
         </ul>
