Admin controller düzenlemeleri AdminExperience(CRUD), AdminSettings(CRUD) Sayfalar oluşturuldu. Tasarımsal düzenlemeler yapıldı.
Mesajlar Kısmı Eksik.
Ana sayfada Ufak Bir Renk Değişimine Gidilecek.
Blog kısmı yazılmaya başlanacak

--- a/Janson/Views/Admin/SideBarPartial.cshtml
+++ b/Janson/Views/Admin/SideBarPartial.cshtml
@@ -11,7 +11,7 @@
 
             <li>
                 <a href="~/Admin/index" aria-expanded="false">
-                    <i class="icon-action-undo menu-icon"></i><span class="nav-text">Ana Sayfa</span>
+                    <i class="mdi mdi-application"></i><span class="nav-text">Ana Sayfa</span>
                 </a>
             </li>
 
@@ -19,7 +19,7 @@
 
             <li>
                 <a href="~/AdminAbout/index" aria-expanded="false">
-                    <i class="mdi mdi-ferry"></i><span class="nav-text">About</span>
+                    <i class="mdi mdi-comment-alert-outline"></i><span class="nav-text">About</span>
                 </a>
             </li>
 
@@ -32,14 +32,43 @@
             @*Partial olarak geçtim kullanımdan kaldırdım.*@
 
             <li>
+                <a href="~/AdminMessage/index" aria-expanded="false">
+                    <i class="mdi mdi-message-reply-text"></i><span class="nav-text">Messages</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="~/AdminBlog/index" aria-expanded="false">
+                    <i class="mdi mdi-blogger"></i><span class="nav-text">Blog</span>
+                </a>
+            </li>
+
+
+
+            <li>
+                <a href="~/AdminExperience/index" aria-expanded="false">
+                    <i class="mdi mdi-grease-pencil"></i><span class="nav-text">Experience</span>
+                </a>
+            </li>
+
+
+
+            <li>
                 <a href="~/AdminHobies/index" aria-expanded="false">
-                    <i class="mdi mdi-ferry"></i><span class="nav-text">Hobiler</span>
+                    <i class="mdi mdi-checkerboard"></i><span class="nav-text">Hobiler</span>
                 </a>
             </li>
 
             <li>
                 <a href="~/AdminGalery/index" aria-expanded="false">
-                    <i class="mdi mdi-ferry"></i><span class="nav-text">Galery</span>
+                    <i class="mdi mdi-camera"></i><span class="nav-text">Galery</span>
+                </a>
+            </li>
+
+
+            <li>
+                <a href="~/AdminSettings/index" aria-expanded="false">
+                    <i class="mdi mdi-skull"></i><span class="nav-text">Settings</span>
                 </a>
             </li>
 
