--- a/Janson/Views/Admin/Index.cshtml
+++ b/Janson/Views/Admin/Index.cshtml
@@ -11,7 +11,7 @@
 
 
 
-<table class="table table-bordered form-group" style="background-color:rgb(255, 216, 0); border-radius:10px; font-family:Arial; font-size:15px;" >
+<table class="table table-bordered form-group" style="background-color: rgb(36, 113, 163); border-radius: 10px; font-family: Arial; font-size: 15px; " >
     <tr>
 
         <th>Başlık</th>
@@ -34,7 +34,7 @@
             <td>@x.degisen2</td>
             
 
-            <td><a href="/Admin/UpdateMainpage/@x.ID" class="btn mb-1 btn-rounded btn-outline-dark">Güncelle</a></td>
+            <td><a href="/Admin/UpdateMainpage/@x.ID" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
 
         </tr>
 
