--- a/Janson/Views/AdminAbout/Index.cshtml
+++ b/Janson/Views/AdminAbout/Index.cshtml
@@ -10,7 +10,7 @@
 <h2>About</h2>
 <br />
 
-<table class="table table-bordered form-group" style="background-color:rgb(255, 216, 0); border-radius:10px; font-family:Arial; font-size:15px;">
+<table class="table table-bordered form-group" style="background-color: rgb(36, 113, 163); border-radius: 10px; font-family: Arial; font-size: 15px;">
     <tr>
 
         <th>İcerik</th>
@@ -30,12 +30,12 @@
 
 
 
-            <td><a href="/AdminAbout/UpdateAboutPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-dark">Güncelle</a></td>
+            <td><a href="/AdminAbout/UpdateAboutPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
 
         </tr>
 
     }
 </table>
-
+<br />
 
 @Html.Action("AdminAboutPPartial","AdminAboutP")
