--- a/Janson/Views/AdminAboutP/AdminAboutPPartial.cshtml
+++ b/Janson/Views/AdminAboutP/AdminAboutPPartial.cshtml
@@ -5,7 +5,7 @@
 <h2>About Partial</h2>
 
 
-<table class="table table-bordered form-group" style="background-color:rgb(255, 216, 0); border-radius:10px; font-family:Arial; font-size:15px;">
+<table class="table table-bordered form-group" style="background-color: rgb(36, 113, 163); border-radius: 10px; font-family: Arial; font-size: 15px;">
     <tr>
 
         <th>İcerik</th>
@@ -25,8 +25,8 @@
 
 
 
-            <td><a href="/AdminAboutP/UpdateAboutPPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-dark">Güncelle</a></td>
-            <td><a href="/AdminAboutP/DeleteAboutPPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-secondary">Sil</a></td>
+            <td><a href="/AdminAboutP/UpdateAboutPPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
+            <td><a href="/AdminAboutP/DeleteAboutPPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
 
         </tr>
 
