--- a/Janson/Views/AdminHobies/Index.cshtml
+++ b/Janson/Views/AdminHobies/Index.cshtml
@@ -6,9 +6,9 @@
 }
 
 <h2>Hobiler</h2>
+<br />
 
-
-<table class="table table-bordered form-group" style="background-color:rgb(255, 216, 0); border-radius:10px; font-family:Arial; font-size:15px;">
+<table class="table table-bordered form-group" style="background-color: rgb(36, 113, 163); border-radius: 10px; font-family: Arial; font-size: 15px;">
     <tr>
 
 
@@ -31,8 +31,8 @@
 
 
 
-            <td><a href="/AdminHobies/UpdateHobiesPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-dark">Güncelle</a></td>
-            <td><a href="/AdminHobies/DeleteHobiesPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-secondary">Sil</a></td>
+            <td><a href="/AdminHobies/UpdateHobiesPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
+            <td><a href="/AdminHobies/DeleteHobiesPage/@x.ID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
 
         </tr>
 
