--- a/Janson/Views/Main/AboutUsPartialprt.cshtml
+++ b/Janson/Views/Main/AboutUsPartialprt.cshtml
@@ -19,13 +19,13 @@
         <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="experience">
                 <span>@x.Baslik</span>
-                <p>@x.icerik</p>
+                <p style="color:white">@x.icerik</p>
             </div>
         </div>
-    
+
     }
 
 
 
 
-
+</div>
