--- a/Janson/Views/Main/ContactPartial.cshtml
+++ b/Janson/Views/Main/ContactPartial.cshtml
@@ -75,11 +75,11 @@
                     <div class="row align-items-center">
                         <div class="col-xl-4 col-lg-4">
                             <div class="footer-social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                <a href="#"><i class="fas fa-globe"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="https://x.com/bhmberkan" target="_blank"><i class="fab fa-twitter"></i></a>
+                              
+                                <a href="https://soundcloud.com/berkan-turgut-430037216" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                                
+                                <a href="https://www.instagram.com/bhmberkan" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                         <div class="col-xl-8 col-lg-8">
