--- a/Janson/Views/Main/MainGaleryPartial.cshtml
+++ b/Janson/Views/Main/MainGaleryPartial.cshtml
@@ -2,7 +2,7 @@
 @model List<PhotoTbl>
 
 
-<div class="gallery-area section-padding40">
+<div class="gallery-area section-padding40" style="background-color:rgb(0, 20, 45)">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -11,7 +11,7 @@
                 </div>
             </div>
         </div>
-        <div class="row justify-content-between">
+        <div class="row justify-content-between" >
             @foreach (var x in Model)
             {
                 <div class="offset-xl-1 col-xl-5 col-lg-6 col-md-6 col-sm-6">
