--- a/Janson/Views/Shared/_Layout.cshtml
+++ b/Janson/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                         </div>
                         <!-- Header-btn -->
                         <div class="header-info-right d-none d-lg-block">
-                            <a href="#" class="btn header-btn">Let's Talk <i class="ti-arrow-right"></i></a>
+                            <a href="#" class="btn header-btn">Yönetim <i class="ti-arrow-right"></i></a>
                         </div>
                         <!-- Mobile Menu -->
                         <div class="col-12">
