Blog Detaylarında Oluşturan kısmı, Yorumlar kısmı Ve yorum ekleme kısmı kaldı.

--- a/Janson/Views/Blog/Index.cshtml
+++ b/Janson/Views/Blog/Index.cshtml
@@ -110,13 +110,14 @@
 
                     @Html.Action("CategoryPartial")
 
-                  
+
                     @Html.Action("RecendPartial")
 
                     @Html.Action("TagPartial")
 
-                    
 
+                    @*Blog Detaylarında
+                    Oluşturan kısmı, Yorumlar kısmı Ve yorum ekleme kısmı kaldı.*@
 
 
                 </div>
