Blog sayfası ve blog detail sayfasi ile ilgili her şey bitti diyebilirim. Sadecec Search işlemi kaldı. Admin tarafında da kodlarsam sayfam şu anlık istediğim gibi olacak.

--- a/Janson/Views/Blog/RecendPartial.cshtml
+++ b/Janson/Views/Blog/RecendPartial.cshtml
@@ -10,7 +10,7 @@
     @foreach (var x in Model)
     {
         <div class="media post_item">
-            <img src="@x.Photo" alt="post"  style="width: 115px; height: 95px;">
+            <img src="@x.Photo" alt="post"  style="width: 57px; height: auto;">
             <div class="media-body">
                 <a href="@x.ID">
                     <h3 style="color: #2d2d2d;">@x.Baslik</h3>
