--- a/Janson/Views/Shared/_Layout.cshtml
+++ b/Janson/Views/Shared/_Layout.cshtml
@@ -56,11 +56,11 @@
                                     <li><a href="~/About/Index">About</a></li>
                                     <li><a href="~/Protfolio/Index">Protfolio</a></li>
                                     <li>
-                                        <a href="blog.html">Blog</a>
+                                        <a href="~/blog/Index">Blog</a>
                                         <ul class="submenu">
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog_details.html">Blog Details</a></li>
-                                            <li><a href="elements.html">Elements</a></li>
+                                            <li><a href="~/blog/Index">Blog</a></li>
+                                            <li><a href="https://github.com/bhmberkan" target="_blank">Github</a></li>
+                                            
                                         </ul>
                                     </li>
                                     <li><a href="~/Contact/Index">Contact</a></li>
