--- a/Janson/Views/Shared/_Layout.cshtml
+++ b/Janson/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="~/jnstema/assets/css/slick.css">
     <link rel="stylesheet" href="~/jnstema/assets/css/nice-select.css">
     <link rel="stylesheet" href="~/jnstema/assets/css/style.css">
-
+    <link href="~/jnstema/assets/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <!-- ? Preloader Start -->
