--- a/Janson/Views/Admin/SideBarPartial.cshtml
+++ b/Janson/Views/Admin/SideBarPartial.cshtml
@@ -37,12 +37,18 @@
                 </a>
             </li>
 
+
             <li>
                 <a href="~/AdminBlog/index" aria-expanded="false">
                     <i class="mdi mdi-blogger"></i><span class="nav-text">Blog</span>
                 </a>
             </li>
 
+            <li>
+                <a href="~/AdminBlogMesajlar/index" aria-expanded="false">
+                    <i class="mdi mdi-message-bulleted"></i><span class="nav-text">Messages Blog</span>
+                </a>
+            </li>
 
 
             <li>
