--- a/Janson/Views/Blog/CategoryPartial.cshtml
+++ b/Janson/Views/Blog/CategoryPartial.cshtml
@@ -4,21 +4,15 @@
 <aside class="single_sidebar_widget post_category_widget">
     <h4 class="widget_title" style="color: #2d2d2d;">Category</h4>
     <ul class="list cat-list">
+        <li>
+            @foreach (var Category in Model.Select(x => x.Category).Distinct())
+            {
+                <a href="#">
+                    @Category &ensp;
 
-
-
-        @foreach (var Category in Model.Select(x => x.Category).Distinct())
-        {
-            <li>
-                <a href="#" >@Category &ensp;
-                    
                 </a>
-            </li>
-        }
-
-
-
-
+            }
+        </li>
     </ul>
 </aside>
 
