Eror sayfası, Login işşlemleri. Session/Rolleme gibi oturum yöntemlerini kullanmadım. blog details kısmını tamamladım.

--- a/Janson/Views/Blog/Index.cshtml
+++ b/Janson/Views/Blog/Index.cshtml
@@ -73,23 +73,26 @@
                 <div class="blog_right_sidebar">
 
                     @* search *@
-
                     <aside class="single_sidebar_widget search_widget">
                         <form action="#">
                             <div class="form-group">
-                                <div class="input-group mb-3">
-                                    <input type="text" class="form-control" placeholder='Search Keyword'
-                                           onfocus="this.placeholder = ''"
-                                           onblur="this.placeholder = 'Search Keyword'">
-                                    <div class="input-group-append">
-                                        <button class="btns" type="button"><i class="ti-search"></i></button>
+                                @using (Html.BeginForm("Index", "Blog", FormMethod.Get))
+                                {
+                                    <div class="input-group mb-3">
+                                        @Html.TextBox("search", ViewBag.CurrentFilter as string, new { @class = "form-control", placeholder = "search..." }) &ensp;
+
+                                       
                                     </div>
-                                </div>
+                                    <button class="button rounded-0 primary-bg text-white w-100 btn_1 boxed-btn"
+                                            type="submit">
+                                        Search
+                                    </button>
+                                }
+
+
+
                             </div>
-                            <button class="button rounded-0 primary-bg text-white w-100 btn_1 boxed-btn"
-                                    type="submit">
-                                Search
-                            </button>
+                          
                         </form>
                     </aside>
 
@@ -102,7 +105,7 @@
 
 
                     @*Blog Detaylarında
-                        Oluşturan kısmı, Yorumlar kısmı Ve yorum ekleme kısmı kaldı.*@
+        Oluşturan kısmı, Yorumlar kısmı Ve yorum ekleme kısmı kaldı.*@
 
 
                 </div>
