--- a/Janson/Views/Blog/RecendPartial.cshtml
+++ b/Janson/Views/Blog/RecendPartial.cshtml
@@ -12,7 +12,7 @@
         <div class="media post_item">
             <img src="@x.Photo" alt="post"  style="width: 57px; height: auto;">
             <div class="media-body">
-                <a href="@x.ID">
+                <a href="/BlogDetails/Index/@x.ID">
                     <h3 style="color: #2d2d2d;">@x.Baslik</h3>
                 </a>
                 <p>@x.Tarih</p>
