--- a/Janson/Views/AdminBlog/InsertBlogPage.cshtml
+++ b/Janson/Views/AdminBlog/InsertBlogPage.cshtml
@@ -14,7 +14,7 @@
     <br />
 
     @Html.Label("icerik")
-    @Html.TextBoxFor(x => x.icerik, new { @class = "form-control" })
+    @Html.TextAreaFor(x => x.icerik,10,4, new { @class = "form-control" })
     <br />
 
 
