--- a/Janson/Views/Admin/UpdateMainPage.cshtml
+++ b/Janson/Views/Admin/UpdateMainPage.cshtml
@@ -31,12 +31,12 @@
 
     <br />
     @Html.Label("Degisen 1")
-    @Html.TextBoxFor(x => x.degisen1, new { @class = "form-control" })
+    @Html.TextBoxFor(x => x.degisen1, new { @class = "form-control" ,maxlength="10" })
     <br />
 
     <br />
     @Html.Label("Degisen 2")
-    @Html.TextBoxFor(x => x.degisen2, new { @class = "form-control" })
+    @Html.TextBoxFor(x => x.degisen2, new { @class = "form-control", maxlength = "10" })
     <br />
 
     <button class="btn btn-primary"> Değişiklikleri Kaydet </button>
