--- a/Janson/Views/Main/ContactPartial.cshtml
+++ b/Janson/Views/Main/ContactPartial.cshtml
@@ -13,8 +13,9 @@
                                 </div>
                             </div>
                             <div class="col-xl-2 col-lg-3 col-md-4">
-                                <a href="#" class="btn white-btn f-right sm-left">Download CV</a>
+                                <a href="~/jnstema/cv/BerkanCv_.pdf" class="btn white-btn f-right sm-left" download>Download CV</a>
                             </div>
+                        
                         </div>
                     </div>
                 </div>
